Сделал отладку по-удобнее

--- a/Blury/Blury.csproj
+++ b/Blury/Blury.csproj
@@ -103,6 +103,9 @@
   <ItemGroup>
     <Resource Include="kiss.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="train22_poezd_b03.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
